tests/snapshots/notelist_all__notelist_wide_intervals.snap
---
source: tests/notelist_all.rs
expression: summary
---
=== COMMAND COUNTS ===
BarLine: 4
Beam: 4
BeginPage: 1
EndPage: 1
LedgerLine: 16
MusicChar: 21
NoteStem: 18
SetMusicSize: 1
SetWidths: 1
Staff: 1
TextString: 1
TOTAL: 69

=== STAVES ===
y=72.0 x=[72.0..558.0] lines=5 spacing=6.00

=== BARLINES ===
x=223.9 top=72.0 bottom=96.0
x=330.9 top=72.0 bottom=96.0
x=390.6 top=72.0 bottom=96.0
x=558.0 top=72.0 bottom=96.0

=== BEAMS ===
x=[401.4..422.2] y=[36.1..24.2] slope=-0.571 thick=3.00
x=[443.1..463.9] y=[44.1..34.2] slope=-0.477 thick=3.00
x=[484.8..505.6] y=[52.1..44.2] slope=-0.378 thick=3.00
x=[526.4..547.2] y=[65.1..61.1] slope=-0.192 thick=3.00

=== STEMS: 18 total ===

=== GLYPHS ===
Smufl(57424): 1
Smufl(57476): 2
Smufl(57507): 2
Smufl(57508): 16
